--- a/sass/main.sass
+++ b/sass/main.sass
@@ -181,19 +181,20 @@
 	&__nav
 		width: 100%
 		background-color: #ffffff
+
 		
 
 		ul
 			+between
-			padding-left: 25px		
+			padding-left: 25px					
 
 		a
 			color: $text
 			font-family: $titleFont
 			font-size: 18px
-			padding-bottom: 25px
+			padding-bottom: 32px
 
-			&:first-of-type
+			&:first-child
 				color: $accent
 
 			&:hover
@@ -224,6 +225,7 @@
 		&--wrapper
 			width: 100%
 			padding: 30px 15px
+
 
 		&--info
 			display: none
@@ -287,7 +289,7 @@
 			color: #ffffff
 
 .about-us
-	margin-top: 165px
+	margin-top: 150px
 
 	&__wrapper
 		+between
@@ -443,16 +445,265 @@
 		height: 60px
 
 	&__slider
-		padding-left: 270px
+
+		&--wrapper
+			
 
 		&--image
 			width: 410px
+			border: 10px solid #ffffff
 
 		&--item
 			width: 410px
+			box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.07);
 
-.owl-dots
+// .owl-dots
+// 	width: 850px
+// 	height: 3px
+// 	background-color: #c6c5c5
+// 	position: relative
+// 	display: flex
+// 	flex-direction: row
+// 	margin: 0
+
+// .owl-dot
+	
+// 	span
+// 		width: 200px !important
+// 		height: 100% !important
+// 		border-radius: 0
+		
+// 		// top: 0
+// 		// z-index: 2
+// .hero__slider
+// 	display: flex
+// 	flex-direction: row
+// 	justify-content: space-between
+
+.turnkey
+	padding-top: 190px
+	padding-bottom: 225px
+	background-color: $bgColor
+	background-image: url(../img/bg-paint.png)
+	background-repeat: no-repeat
+	background-position: right
+	background-size: contain
+	position: relative
+
+
+	&__title
+		font-family: $titleFont
+		font-size: 50px
+		text-transform: uppercase
+		line-height: 1.4
+		margin-bottom: 60px
+
+		span
+			color: $accent
+
+	&__subtitle
+		font-size: 20px
+		max-width: 870px
+		margin-bottom: 90px
+
+	&__services
+		display: grid
+		grid-template-columns: 1fr 1fr 1fr
+		max-width: 850px
+		column-gap: 100px
+
+	&__item
+
+		&--icon
+			margin-bottom: 35px
+
+		&--title
+			font-family: $titleFont
+			font-size: 24px
+			color: $accent
+			margin-bottom: 30px
+
+		&--info
+			font-size: 16px
+
+	&__boards
+		position: absolute
+		top: 200px
+		right: 0
+		margin: auto
+
+.sale
+	padding-top: 190px
+	padding-bottom: 180px
+	background-image: url(../img/sale-bg.png)
+	background-position: right
+	background-repeat: no-repeat
+	background-size: cover
+
+	&__wrapper
+		display: flex
+		flex-direction: column
+		align-items: flex-start
+		justify-content: space-between
+
+	&__text-block
+		+between
+		align-items: flex-start
+		width: 100%
+		margin-bottom: 85px
+
+		&--title
+			font-size: 50px
+			font-family: $titleFont
+
+			span
+				color: $accent
+
+		&--info
+			font-size: 20px
+			max-width: 430px
+
+			span
+				color: $accent
+
+	&__item
+		+between
+		align-items: start
+		width: 820px
+
+		&--info
+			+between
+			flex-direction: column
+			align-items: flex-start
+			width: 455px
+			padding-top: 20px
+
+		&--title
+			font-size: 28px
+			color: $accent
+			font-weight: bold
+			margin-bottom: 10px
+
+		&--subtitle
+			font-size: 18px
+			margin-bottom: 30px
+
+		&--button
+			width: 370px
+			height: 60px
+
+	&__price-block
+		+between
+		align-items: flex-end
+		width: 100%
+		margin-bottom: 75px
+
+		&--discount
+			height: 85px
+
+		&--old
+			font-size: 24px
+			color: #a9a9a9
+			text-decoration: line-through
+
+			span
+				vertical-align: top
+				font-size: 18px
+
+		&--new
+			font-size: 36px
+			color: $accent
+			font-weight: bold
+
+			span
+				vertical-align: top
+				font-size: 22px
+
+		&--benefit
+			height: 85px
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+
+		&--text
+			font-size: 20px
+
+		&--value
+			font-size: 30px
+			color: $accent
 			
+			span
+				vertical-align: top
+				font-size: 20px
+
+.partners
+	padding-top: 175px
+	padding-bottom: 190px
+	background-color: $bgColor
+
+	&__wrapper
+		display: flex
+		flex-direction: column
+		align-items: center
+		overflow: hidden
+
+	&__title
+		font-size: 50px
+		font-family: $titleFont
+		text-align: center
+		margin-bottom: 70px
+
+	&__items
+		display: grid
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr
+		grid-gap: 20px
+		margin-bottom: 70px
+		width: 100%
+
+		&--content
+			height: 160px
+			background-color: #ffffff
+			display: flex
+			align-items: center
+			justify-content: center
+
+	&__button
+		width: 345px
+		height: 60px
+		position: relative
+
+		&::before
+			display: block
+			content: ''
+			border-top: 1px solid #c6c5c5
+			width: 1000px
+			position: absolute
+			top: 50%
+			right: 390px
+
+
+		&::after
+			display: block
+			content: ''
+			border-top: 1px solid #c6c5c5
+			width: 1000px
+			position: absolute
+			top: 50%
+			left: 390px
+
+
+			
+
+				
+
+
+
+
+
+
+
+	
+
 
 
 
