--- a/sass/_base/_vars.sass
+++ b/sass/_base/_vars.sass
@@ -63,6 +63,7 @@ button
 		outline: none
 		text-decoration: none
 		outline: none
+		cursor: pointer
 
 
 input, textarea, select
@@ -73,13 +74,11 @@ input, textarea, select
 	// -webkit-appearance: none
 	
 	&:focus:required:invalid
-		border-color: red
 		outline: none
 		box-shadow: none
 		-webkit-appearance: none
 
 	&:required:valid
-		border-color: green
 		outline: none
 		box-shadow: none
 		-webkit-appearance: none
