--- a/sass/main.sass
+++ b/sass/main.sass
@@ -13,7 +13,7 @@
 	+r(992)
 		max-width: 768px
 
-	+r(767)
+	+r(768)
 		max-width: 576px
 
 	+r(576)
@@ -52,6 +52,15 @@
 
 	+r(1200)
 		display: block
+
+	+r(768)
+		position: absolute
+		top: 30px
+		right: 30px
+
+	+r(320)
+		top: 20px
+		right: 20px
 
 	&:hover
 		span
@@ -92,7 +101,7 @@
 			width: 25px
 
 	&--active
-		z-index: 100
+		z-index: 10000
 
 		&:hover
 			span
@@ -126,6 +135,21 @@
 	left: 0
 	z-index: 1000
 
+	+r(992)
+		max-width: 992px
+
+	+r(768)
+		max-width: 768px
+
+	+r(576)
+		max-width: 576px
+
+	+r(480)
+		max-width: 480px
+
+	+r(320)
+		max-width: 320px
+
 	&__wrapper
 		+between
 		flex-direction: column
@@ -139,14 +163,29 @@
 			+between
 			width: 100%
 
+			+r(768)
+				flex-direction: column
+				row-gap: 20px
+
+			+r(320)
+				align-items: start
+
 	&__logo
 		display: block
 		width: 320px
 		height: 50px
 
+		+r(320)
+			width: 200px
+
 		img
 			width: 100%
 			height: auto
+
+	&__button
+
+		+r(320)
+			align-self: center
 
 	&__worktime
 		font-size: 15px
@@ -182,11 +221,9 @@
 		width: 100%
 		background-color: #ffffff
 
-		
-
 		ul
 			+between
-			padding-left: 25px					
+			padding-left: 25px
 
 		a
 			color: $text
@@ -194,18 +231,15 @@
 			font-size: 18px
 			padding-bottom: 32px
 
-			&:first-child
-				color: $accent
-
 			&:hover
 				color: $accent
 				border-bottom: 3px solid $accent
 
 		li
-			
+
 			&:first-child
 				position: relative
-				
+
 			&::before
 				content: url(../img/dots.png)
 				position: absolute
@@ -226,6 +260,10 @@
 			width: 100%
 			padding: 30px 15px
 
+			+r(1200)
+				height: 100%
+				+between
+				flex-direction: column
 
 		&--info
 			display: none
@@ -262,7 +300,6 @@
 			font-size: 16px
 			color: #ffffff
 
-
 	&__nav--active
 		display: flex
 		flex-direction: column
@@ -271,11 +308,17 @@
 		left: 0
 		top: 0
 		visibility: visible
-		z-index: 1000
+		z-index: 500
 		opacity: 1
 		transition: 0.5s
 		background-color: $accent
 		row-gap: 25px
+
+		+r(480)
+			width: 80%
+
+		+r(320)
+			width: 100%
 
 		ul
 			flex-direction: column
@@ -291,6 +334,12 @@
 .about-us
 	margin-top: 150px
 
+	+r(1200)
+		margin-top: 75px
+
+	+r(768)
+		margin-top: 100px
+
 	&__wrapper
 		+between
 		flex-direction: row
@@ -301,10 +350,34 @@
 		padding-bottom: 135px
 		background-color: $bgColor
 
+		+r(1200)
+			padding-top: 60px
+			padding-bottom: 80px
+
+		+r(320)
+			padding-bottom: 50px
+
 		&--wrapper
 			+between
 
+			+r(1200)
+				flex-direction: column
+				align-items: start
+				row-gap: 25px
+
+			+r(320)
+				text-align: center
+
 		&--title
+
+			+r(768)
+				font-size: 52px
+
+			+r(480)
+				font-size: 45px
+
+			+r(320)
+				font-size: 36px
 
 			span
 				color: $accent
@@ -319,9 +392,21 @@
 		background-size: cover
 		padding-bottom: 115px
 
+		+r(1200)
+			padding-bottom: 75px
+
+		+r(320)
+			padding-bottom: 25px
+
 		&--wrapper
 			+between
 			padding-right: 90px
+
+			+r(1200)
+				padding-right: 0
+
+			+r(320)
+				padding: 0
 
 	&__anchor
 		height: 260px
@@ -329,6 +414,9 @@
 		justify-content: flex-end
 		flex-direction: column
 		row-gap: 75px
+
+		+r(1200)
+			display: none
 
 		p
 			text-transform: uppercase
@@ -342,12 +430,30 @@
 	&__image
 		z-index: 10
 		margin-top: -50px
-		
+
+		+r(768)
+			margin: -25px
+
+		+r(480)
+			display: flex
+			align-items: center
+			width: 100%
+			justify-content: center
+
+		+r(320)
+			margin: 0
+
 		img
 			max-width: 970px
 			width: 100%
 			border: 10px solid #ffffff
-			
+
+			+r(480)
+				max-width: 360px
+
+			+r(320)
+				max-width: 100%
+
 .services
 	background-image: url(../img/main-bg.png)
 	background-size: cover
@@ -360,28 +466,62 @@
 		padding-top: 215px
 		padding-bottom: 185px
 
+		+r(1200)
+			padding-bottom: 110px
+
+		+r(768)
+			padding-top: 120px
+
+		+r(480)
+			padding-top: 80px
+
 	&__title
 		position: absolute
 		top: 0
-		left: 0
-		right: 0
 		margin: auto
+
+		+r(1200)
+			max-width: 768px
+
+		+r(768)
+			max-width: 576px
+
+		+r(480)
+			max-width: 320px
 
 	&__items
 		+between
 		width: 100%
 		row-gap: 110px
-	
+
+		+r(1200)
+			row-gap: 60px
+
+		+r(992)
+			row-gap: 80px
+
+		+r(320)
+			row-gap: 100px
+
 	&__content
 		+between
 		width: 100%
 
+		+r(1200)
+			flex-direction: column
+			align-items: flex-start
+
 		&:nth-child(2)
 			flex-direction: row-reverse
-		
+
+			+r(992)
+				flex-direction: row
+
 		&:nth-child(4)
 			flex-direction: row-reverse
-			
+
+			+r(992)
+				flex-direction: row
 
 		&--text
 			+between
@@ -389,19 +529,48 @@
 			align-items: start
 			max-width: 580px
 
+			+r(1200)
+				margin-bottom: 20px
+
+			+r(992)
+				max-width: 100%
+				margin-bottom: 30px
+
 		&--title
 			font-size: 48px
 			font-family: $titleFont
 			margin-bottom: 45px
 
+			+r(768)
+				font-size: 40px
+
+			+r(480)
+				font-size: 35px
+
+			+r(320)
+				font-size: 26px
+				margin-bottom: 30px
+				width: 100%
+				text-align: center
+
 		&--description
 			font-size: 18px
 			margin-bottom: 55px
 
+			+r(320)
+				margin-bottom: 30px
+				text-align: center
+
 		&--info
 			+between
-			column-gap: 40px  
-		
+			column-gap: 40px
+
+			+r(320)
+				flex-direction: column
+				align-items: center
+				width: 100%
+				row-gap: 10px
+
 		&--button
 			max-width: 165px
 			height: 60px
@@ -419,7 +588,11 @@
 
 		&--image
 			max-width: 580px
-			
+
+			+r(992)
+				max-width: 100%
+				width: 100%
+
 			img
 				width: 100%
 				border: 10px solid #ffffff
@@ -429,13 +602,41 @@
 	padding-top: 165px
 	padding-bottom: 200px
 
+	+r(1200)
+		padding-top: 100px
+		padding-bottom: 120px
+
+	+r(768)
+		padding-top: 80px
+		padding-bottom: 80px
+
+	+r(320)
+		padding-top: 50px
+		padding-bottom: 50px
+
 	&__top
 		+between
 		margin-bottom: 75px
 
+		+r(992)
+			flex-direction: column
+			align-items: start
+
 	&__title
 		font-family: $titleFont
 		font-size: 50px
+
+		+r(992)
+			margin-bottom: 40px
+
+		+r(768)
+			font-size: 45px
+
+		+r(480)
+			font-size: 38px
+
+		+r(320)
+			font-size: 26px
 
 		span
 			color: $accent
@@ -444,41 +645,127 @@
 		max-width: 180px
 		height: 60px
 
-	&__slider
+//---------------------------swiper slider-------------------
 
-		&--wrapper
-			
+.swiper-container
+	width: 100%
+	height: 100%
+	position: relative
 
-		&--image
-			width: 410px
-			border: 10px solid #ffffff
+.swiper-wrapper
+	position: relative
+	display: flex
+	flex-direction: row
+	align-items: start
+	margin-bottom: 90px
 
-		&--item
-			width: 410px
-			box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.07);
+	+r(576)
+		margin-bottom: 50px
 
-// .owl-dots
-// 	width: 850px
-// 	height: 3px
-// 	background-color: #c6c5c5
-// 	position: relative
-// 	display: flex
-// 	flex-direction: row
-// 	margin: 0
+	+r(320)
+		margin-bottom: 25px
 
-// .owl-dot
-	
-// 	span
-// 		width: 200px !important
-// 		height: 100% !important
-// 		border-radius: 0
-		
-// 		// top: 0
-// 		// z-index: 2
-// .hero__slider
-// 	display: flex
-// 	flex-direction: row
-// 	justify-content: space-between
+.swiper-slide
+	text-align: center
+	font-size: 18px
+	background: #fff
+	display: flex
+	justify-content: center
+	display: flex
+	flex-direction: column
+
+	img
+		border: 10px solid #ffffff
+		width: 410px
+
+		+r(1200)
+			width: 100%
+
+	a
+		color: $text
+		font-size: 24px
+		width: 4
+
+		&:hover
+			color: $accent
+			cursor: pointer
+
+.swiper-pagination
+	width: 100%
+	z-index: 10
+	position: absolute
+	bottom: 7px
+
+	+r(320)
+		bottom: 8px
+
+.swiper-pagination-progressbar
+	background-color: #c6c5c5
+	width: 850px
+	height: 4px
+	z-index: 1
+	position: relative
+
+	+r(1200)
+		width: 650px
+
+	+r(992)
+		width: 450px
+
+	+r(768)
+		width: 350px
+
+	+r(576)
+		width: 275px
+
+	+r(320)
+		width: 200px
+		height: 3px
+
+.swiper-pagination-progressbar-fill
+	background-color: $accent
+	width: 100%
+	height: 100%
+	transform-origin: left top
+	left: 0
+	top: 0
+	position: absolute
+
+.swiper-arrows
+	display: flex
+	width: 270px
+	justify-content: space-between
+	position: absolute
+	right: 0
+	bottom: 2px
+
+	+r(992)
+		width: 180px
+
+	+r(768)
+		width: 150px
+
+	+r(576)
+		width: 100px
+
+	+r(320)
+		width: 70px
+
+.slider-arrow
+
+	+r(992)
+		width: 80px
+
+	+r(768)
+		width: 70px
+
+	+r(576)
+		width: 40px
+
+	+r(320)
+		width: 30px
+
+//--------------------------------------------------------------
 
 .turnkey
 	padding-top: 190px
@@ -490,6 +777,18 @@
 	background-size: contain
 	position: relative
 
+	+r(1200)
+		padding-top: 100px
+		padding-bottom: 100px
+
+	+r(992)
+		padding-top: 80px
+		padding-bottom: 80px
+
+	+r(576)
+		background-size: cover
+
+	&__wrapper
 
 	&__title
 		font-family: $titleFont
@@ -497,6 +796,19 @@
 		text-transform: uppercase
 		line-height: 1.4
 		margin-bottom: 60px
+
+		+r(1200)
+			text-align: center
+			margin-bottom: 40px
+
+		+r(768)
+			font-size: 45px
+
+		+r(480)
+			font-size: 38px
+
+		+r(320)
+			font-size: 26px
 
 		span
 			color: $accent
@@ -506,16 +818,47 @@
 		max-width: 870px
 		margin-bottom: 90px
 
+		+r(1200)
+			margin-bottom: 70px
+			text-align: center
+			max-width: 100%
+
+		+r(320)
+			margin-bottom: 50px
+			font-size: 18px
+
 	&__services
 		display: grid
 		grid-template-columns: 1fr 1fr 1fr
 		max-width: 850px
 		column-gap: 100px
 
+		+r(1200)
+			max-width: 100%
+
+		+r(576)
+			grid-template-columns: 1fr
+			margin: 0
+			padding: 0
+			grid-gap: 30px
+
+		+r(320)
+			grid-gap: 50px
+
 	&__item
+
+		+r(576)
+			display: flex
+			justify-content: space-between
+			flex-direction: column
+			align-items: center
+			width: 100%
 
 		&--icon
 			margin-bottom: 35px
+
+			+r(576)
+				width: 100px
 
 		&--title
 			font-family: $titleFont
@@ -525,12 +868,19 @@
 
 		&--info
 			font-size: 16px
+			max-width: 300px
+
+			+r(320)
+				text-align: center
 
 	&__boards
 		position: absolute
 		top: 200px
 		right: 0
 		margin: auto
+
+		+r(1200)
+			display: none
 
 .sale
 	padding-top: 190px
@@ -539,6 +889,19 @@
 	background-position: right
 	background-repeat: no-repeat
 	background-size: cover
+
+	+r(1200)
+		padding-top: 100px
+		padding-bottom: 80px
+		background-position: center
+
+	+r(768)
+		padding-top: 80px
+		padding-bottom: 80px
+
+	+r(320)
+		padding-top: 50px
+		padding-bottom: 50px
 
 	&__wrapper
 		display: flex
@@ -552,16 +915,36 @@
 		width: 100%
 		margin-bottom: 85px
 
+		+r(1200)
+			flex-direction: column
+			row-gap: 20px
+			margin-bottom: 50px
+
+		+r(320)
+			text-align: center
+			margin-bottom: 30px
+
 		&--title
 			font-size: 50px
 			font-family: $titleFont
 
+			+r(768)
+				font-size: 45px
+
+			+r(480)
+				font-size: 38px
+
+			+r(320)
+				font-size: 26px
 			span
 				color: $accent
 
 		&--info
 			font-size: 20px
 			max-width: 430px
+
+			+r(320)
+				font-size: 16px
 
 			span
 				color: $accent
@@ -571,6 +954,15 @@
 		align-items: start
 		width: 820px
 
+		+r(768)
+			width: 90%
+
+		+r(480)
+			width: 100%
+
+		+r(320)
+			align-items: center
+
 		&--info
 			+between
 			flex-direction: column
@@ -578,19 +970,40 @@
 			width: 455px
 			padding-top: 20px
 
+			+r(480)
+				align-items: center
+
+			+r(320)
+				width: 100%
+
 		&--title
 			font-size: 28px
 			color: $accent
 			font-weight: bold
 			margin-bottom: 10px
 
+			+r(320)
+				font-size: 24px
+				text-align: center
+
 		&--subtitle
 			font-size: 18px
 			margin-bottom: 30px
 
+			+r(320)
+				font-size: 16px
+
 		&--button
 			width: 370px
 			height: 60px
+
+			+r(320)
+				width: 100%
+
+		&--image
+
+			+r(768)
+				display: none
 
 	&__price-block
 		+between
@@ -598,26 +1011,47 @@
 		width: 100%
 		margin-bottom: 75px
 
+		+r(320)
+			margin-bottom: 40px
+
 		&--discount
 			height: 85px
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+
+			+r(320)
+				height: 60px
 
 		&--old
 			font-size: 24px
 			color: #a9a9a9
 			text-decoration: line-through
 
+			+r(320)
+				font-size: 16px
+
 			span
 				vertical-align: top
 				font-size: 18px
+
+				+r(320)
+					font-size: 10px
 
 		&--new
 			font-size: 36px
 			color: $accent
 			font-weight: bold
 
+			+r(320)
+				font-size: 20px
+
 			span
 				vertical-align: top
 				font-size: 22px
+
+				+r(320)
+					font-size: 12px
 
 		&--benefit
 			height: 85px
@@ -625,21 +1059,49 @@
 			flex-direction: column
 			justify-content: space-between
 
+			+r(320)
+				height: 60px
+
 		&--text
 			font-size: 20px
+
+			+r(320)
+				font-size: 14px
 
 		&--value
 			font-size: 30px
 			color: $accent
-			
+
+			+r(320)
+				font-size: 20px
+
 			span
 				vertical-align: top
 				font-size: 20px
+
+				+r(320)
+					font-size: 12px
 
 .partners
 	padding-top: 175px
 	padding-bottom: 190px
 	background-color: $bgColor
+
+	+r(1200)
+		padding-top: 120px
+		padding-bottom: 120px
+
+	+r(992)
+		padding-top: 100px
+		padding-bottom: 100px
+
+	+r(768)
+		padding-top: 80px
+		padding-bottom: 80px
+
+	+r(320)
+		padding-top: 80px
+		padding-bottom: 60px
 
 	&__wrapper
 		display: flex
@@ -653,6 +1115,15 @@
 		text-align: center
 		margin-bottom: 70px
 
+		+r(768)
+			font-size: 45px
+
+		+r(480)
+			font-size: 38px
+
+		+r(320)
+			font-size: 26px
+
 	&__items
 		display: grid
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr
@@ -660,17 +1131,39 @@
 		margin-bottom: 70px
 		width: 100%
 
+		+r(1200)
+			grid-template-columns: 1fr 1fr 1fr
+
+		+r(768)
+			grid-template-columns: 1fr 1fr
+
+		+r(320)
+			grid-template-columns: 1fr
+
 		&--content
 			height: 160px
 			background-color: #ffffff
 			display: flex
 			align-items: center
 			justify-content: center
+			box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.03)
+
+			&:last-child
+				+r(1200)
+					grid-column-start: 2
+					grid-column-end: 2
+
+				+r(320)
+					grid-column-start: 1
+					grid-column-end: 1
 
 	&__button
 		width: 345px
 		height: 60px
 		position: relative
+
+		+r(320)
+			width: 95%
 
 		&::before
 			display: block
@@ -681,7 +1174,6 @@
 			top: 50%
 			right: 390px
 
-
 		&::after
 			display: block
 			content: ''
@@ -691,23 +1183,247 @@
 			top: 50%
 			left: 390px
 
+.contacts
+	padding-top: 165px
+	padding-bottom: 175px
+	background-image: url(../img/contacts-bg.png)
 
-			
+	+r(1200)
+		padding-top: 120px
+		padding-bottom: 120px
 
-				
+	+r(992)
+		padding-top: 80px
+		padding-bottom: 80px
 
+	+r(320)
+		padding-top: 40px
+		padding-bottom: 40px
 
+	&__wrapper
+		+between
 
+	&__title
+		font-size: 44px
+		font-family: $titleFont
+		color: #ffffff
+		margin-bottom: 80px
 
+		+r(1200)
+			font-size: 30px
 
+		+r(480)
+			font-size: 26px
 
+		+r(320)
+			font-size: 22px
+			margin-bottom: 40px
 
-	
+	&__item
+		+between
+		width: 100%
 
+		+r(768)
+			flex-direction: column
+			row-gap: 50px
 
+	&__form
+		+between
+		flex-direction: column
+		align-items: flex-start
+		width: 365/1300*100%
+		height: 360px
 
+		+r(1200)
+			width: 365/962*100%
 
+		+r(992)
+			width: 330/738*100%
 
+		+r(768)
+			width: 100%
+
+		&--item
+			display: flex
+			flex-direction: column
+			width: 100%
+			margin-bottom: 52px
+
+			label
+				font-size: 24px
+				color: #ffffff
+
+				+r(320)
+					font-size: 20px
+
+			input
+				border: none
+				border-bottom: 1px solid #ffffff
+				background-color: transparent
+				width: 100%
+				color: #ffffff
+
+		&--button
+			border-color: #ffffff
+			color: #ffffff
+			width: 100%
+			margin-bottom: 25px
+
+		&--info
+			color: #ffffff
+			font-size: 13px
+
+			a
+				text-decoration: underline
+				font-weight: bold
+
+	&__requisites
+		+between
+		flex-direction: column
+		align-items: start
+		width: 360/1300*100%
+		height: 360px
+
+		+r(1200)
+			width: 365/962*100%
+
+		+r(992)
+			width: 330/738*100%
+
+		+r(768)
+			width: 100%
+
+		+r(320)
+			height: 300px
+			text-align: center
+
+		&--title
+			font-family: $titleFont
+			font-size: 30px
+			color: #ffffff
+			margin-bottom: 40px
+
+			+r(480)
+				font-size: 26px
+				margin-bottom: 20px
+
+			+r(320)
+				font-size: 22px
+				margin-bottom: 0
+				width: 100%
+
+		&--item
+			width: 100%
+			margin-bottom: 20px
+
+			+r(320)
+				margin-bottom: 0
+
+		&--city
+			color: #ffffff
+			font-size: 20px
+			margin-bottom: 10px
+
+			+r(992)
+				font-size: 18px
+
+			+r(320)
+				font-size: 12px
+
+		&--num
+			color: #ffffff
+			font-size: 30px
+			font-weight: bold
+
+			+r(992)
+				font-size: 25px
+
+			+r(320)
+				font-size: 20px
+
+		&--email
+			color: #ffffff
+			font-size: 24px
+
+			+r(992)
+				font-size: 20px
+
+			+r(480)
+				font-size: 18px
+
+			+r(320)
+				font-size: 14px
+				width: 100%
+
+.footer
+	padding-top: 45px
+	padding-bottom: 40px
+
+	+r(992)
+		padding-top: 15px
+		padding-bottom: 10px
+
+	&__wrapper
+		+between
+
+		+r(768)
+			flex-direction: column
+			align-items: center
+			row-gap: 10px
+
+	&__policy
+		font-size: 18px
+		color: $text
+
+		+r(1200)
+			font-size: 14px
+
+		+r(992)
+			font-size: 12px
+
+		+r(768)
+			font-size: 14px
+
+		&:hover
+			color: $text
+			text-decoration: underline
+
+	&__copyright
+		font-size: 14px
+		color: #949494
+
+		+r(1200)
+			font-size: 12px
+
+		+r(992)
+			font-size: 10px
+
+		+r(768)
+			font-size: 12px
+
+	&__made-by
+		+between
+		width: 390px
+
+		+r(1200)
+			width: 360px
+
+		+r(992)
+			width: 240px
+
+		p
+			color: #949494
+
+			+r(1200)
+				font-size: 12px
+
+			+r(992)
+				font-size: 9px
+
+		img
+
+			+r(992)
+				width: 100px
 
 .section
 	padding: 150px 0
@@ -716,10 +1432,6 @@
 		display: flex
 		flex-wrap: wrap
 		gap: 15px
-
-.footer
-	&__container
-		+between
 
 // -----MODAL-----
 .modal
