--- a/sass/_base/_mixins.sass
+++ b/sass/_base/_mixins.sass
@@ -52,8 +52,8 @@
 	transform: scale($var)
 
 //----------------------+transition----------------------
-// =transition
-// 	transition: all .6s
+=transition
+	transition: all .6s
 	// transition-timing-function: ease-out
 
 //----------------------+between----------------------
