--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,11 +1,55 @@
 @import base
 
+//---------------------
+
+main
+	margin-top: 150px
+
+	+r(1200)
+		margin-top: 50px
+
+	+r(768)
+		margin-top: 140px
+
+h1
+	font-size: 60px
+
+	+r(1440)
+		font-size: 36px
+
+	+r(576)
+		font-size: 30px
+
+h2
+	font-size: 50px
+
+	+r(1440)
+		font-size: 36px
+
+	+r(576)
+		font-size: 30px
+
+	+r(480)
+		font-size: 26px
+
+h3
+	font-size: 48px
+
+	+r(1440)
+		font-size: 34px
+
+	+r(576)
+		font-size: 28px
+
 // -----CONTAINER-----
 .container
 	width: 100%
 	max-width: 1330px
 	padding: 0 15px
 	margin: 0 auto
+
+	+r(1440)
+		max-width: 1330px
 
 	+r(1200)
 		max-width: 992px
@@ -74,10 +118,9 @@
 		position: absolute
 		right: 0
 		top: 50%
-		// transform: translate(0, -50%)
 		width: 12px
 		height: 2px
-		background-color: $text
+		background-color: $accent
 		border-radius: 4px
 		+transition
 		bottom: 0
@@ -88,7 +131,7 @@
 			display: block
 			position: absolute
 			right: 0
-			background-color: $text
+			background-color: $accent
 			height: 2px
 			+transition
 
@@ -101,7 +144,7 @@
 			width: 25px
 
 	&--active
-		z-index: 10000
+		z-index: 1000
 
 		&:hover
 			span
@@ -110,6 +153,9 @@
 				&::before,
 				&::after
 					background-color: $accent
+
+					+r(320)
+						background-color: #fff
 
 		.hamburger__item
 			background-color: transparent
@@ -125,7 +171,6 @@
 				transform: rotate(-45deg)
 
 .title
-	font-size: $titleFz
 	font-family: $titleFont
 
 .header
@@ -134,25 +179,14 @@
 	right: 0
 	left: 0
 	z-index: 1000
+	+transition
 
-	+r(992)
-		max-width: 992px
+	&--active
+		box-shadow: 0 0 5px 0 rgba(#000, .33)
+		top: -80px
 
-	+r(768)
-		max-width: 768px
-
-	+r(576)
-		max-width: 576px
-
-	+r(480)
-		max-width: 480px
-
-	+r(320)
-		max-width: 320px
-
-	&__wrapper
-		+between
-		flex-direction: column
+		+r(1200)
+			top: 0
 
 	&__top
 		width: 100%
@@ -220,22 +254,29 @@
 	&__nav
 		width: 100%
 		background-color: #ffffff
+		height: 75px
 
 		ul
 			+between
 			padding-left: 25px
+			height: 100%
 
-		a
-			color: $text
-			font-family: $titleFont
-			font-size: 18px
-			padding-bottom: 32px
+			a
+				color: $text
+				font-family: $titleFont
+				font-size: 18px
+				display: flex
+				align-items: center
+				justify-content: center
+				border: 3px solid transparent
 
-			&:hover
-				color: $accent
-				border-bottom: 3px solid $accent
+				&:hover
+					color: $accent
+					border-bottom: 3px solid $accent
 
 		li
+			height: 100%
+			display: flex
 
 			&:first-child
 				position: relative
@@ -243,7 +284,7 @@
 			&::before
 				content: url(../img/dots.png)
 				position: absolute
-				top: 5px
+				top: 30px
 				left: -25px
 
 		+r(1200)
@@ -257,8 +298,7 @@
 			visibility: hidden
 
 		&--wrapper
-			width: 100%
-			padding: 30px 15px
+			height: 75px
 
 			+r(1200)
 				height: 100%
@@ -314,6 +354,9 @@
 		background-color: $accent
 		row-gap: 25px
 
+		+r(576)
+			width: 80%
+
 		+r(480)
 			width: 80%
 
@@ -323,26 +366,26 @@
 		ul
 			flex-direction: column
 			width: 100%
-			max-height: 500px
+			max-height: 350px
 			min-height: 20%
 			padding-top: 50px
 			gap: 15px
 
-		a
-			color: #ffffff
+			li
+				height: 30px
 
-.about-us
-	margin-top: 150px
+				a
+					color: #ffffff
+					height: 30px
 
-	+r(1200)
-		margin-top: 75px
+					&:hover
+						color: #ffffff
+						text-decoration: underline
 
-	+r(768)
-		margin-top: 100px
+.about
 
 	&__wrapper
 		+between
-		flex-direction: row
 
 	&__text
 		width: 100%
@@ -350,12 +393,12 @@
 		padding-bottom: 135px
 		background-color: $bgColor
 
-		+r(1200)
-			padding-top: 60px
-			padding-bottom: 80px
+		+r(1440)
+			padding-top: 90px
+			padding-bottom: 90px
 
-		+r(320)
-			padding-bottom: 50px
+		+r(992)
+			padding-top: 50px
 
 		&--wrapper
 			+between
@@ -370,21 +413,35 @@
 
 		&--title
 
-			+r(768)
-				font-size: 52px
-
-			+r(480)
-				font-size: 45px
-
-			+r(320)
-				font-size: 36px
-
 			span
 				color: $accent
 
 		&--info
 			max-width: 400px
 			font-size: 18px
+			position: relative
+
+			&::after
+				content: ''
+				width: 300px
+				border-bottom: 1px solid $accent
+				position: absolute
+				bottom: -55px
+				left: 0
+
+				+r(1440)
+					display: none
+
+			&::before
+				content: ''
+				width: 145px
+				border-bottom: 1px solid #c6c5c5
+				position: absolute
+				left: 0
+				bottom: -47px
+
+				+r(1440)
+					display: none
 
 	&__illustration
 		width: 100%
@@ -392,8 +449,8 @@
 		background-size: cover
 		padding-bottom: 115px
 
-		+r(1200)
-			padding-bottom: 75px
+		+r(1440)
+			padding-bottom: 60px
 
 		+r(320)
 			padding-bottom: 25px
@@ -402,8 +459,11 @@
 			+between
 			padding-right: 90px
 
-			+r(1200)
-				padding-right: 0
+			+r(1440)
+				justify-content: center
+
+			+r(768)
+				padding: 0
 
 			+r(320)
 				padding: 0
@@ -415,21 +475,31 @@
 		flex-direction: column
 		row-gap: 75px
 
-		+r(1200)
+		&:hover
+			cursor: pointer
+			transform: scale(1.03)
+
+		+r(1440)
 			display: none
 
-		p
+		span
 			text-transform: uppercase
 			color: $accent
 			font-family: $titleFont
 			transform: rotate(-90deg)
 
-			&:hover
-				cursor: pointer
+		&--arrow
+
+			img
+				transform: rotate(90deg)
 
 	&__image
 		z-index: 10
 		margin-top: -50px
+		max-width: 970px
+		width: 100%
+		border: 10px solid #ffffff
+		overflow: hidden
 
 		+r(768)
 			margin: -25px
@@ -444,9 +514,8 @@
 			margin: 0
 
 		img
-			max-width: 970px
 			width: 100%
-			border: 10px solid #ffffff
+			object-fit: cover
 
 			+r(480)
 				max-width: 360px
@@ -458,33 +527,41 @@
 	background-image: url(../img/main-bg.png)
 	background-size: cover
 	background-position: top
+	padding-top: 215px
+	padding-bottom: 185px
+	position: relative
+
+	+r(1440)
+		padding-bottom: 90px
+
+	+r(992)
+		padding-top: 160px
+		padding-bottom: 50px
+
+	+r(768)
+		padding-top: 120px
+
+	+r(320)
+		padding-top: 70px
 
 	&__wrapper
 		+between
 		flex-direction: column
-		position: relative
-		padding-top: 215px
-		padding-bottom: 185px
-
-		+r(1200)
-			padding-bottom: 110px
-
-		+r(768)
-			padding-top: 120px
-
-		+r(480)
-			padding-top: 80px
 
 	&__title
 		position: absolute
+		left: 50%
 		top: 0
-		margin: auto
+		transform: translate(-50%)
 
 		+r(1200)
 			max-width: 768px
 
 		+r(768)
 			max-width: 576px
+
+		+r(576)
+			max-width: 480px
 
 		+r(480)
 			max-width: 320px
@@ -499,9 +576,6 @@
 
 		+r(992)
 			row-gap: 80px
-
-		+r(320)
-			row-gap: 100px
 
 	&__content
 		+between
@@ -537,18 +611,10 @@
 				margin-bottom: 30px
 
 		&--title
-			font-size: 48px
 			font-family: $titleFont
 			margin-bottom: 45px
 
-			+r(768)
-				font-size: 40px
-
-			+r(480)
-				font-size: 35px
-
 			+r(320)
-				font-size: 26px
 				margin-bottom: 30px
 				width: 100%
 				text-align: center
@@ -569,7 +635,7 @@
 				flex-direction: column
 				align-items: center
 				width: 100%
-				row-gap: 10px
+				gap: 10px
 
 		&--button
 			max-width: 165px
@@ -588,6 +654,7 @@
 
 		&--image
 			max-width: 580px
+			border: 10px solid #ffffff
 
 			+r(992)
 				max-width: 100%
@@ -595,22 +662,18 @@
 
 			img
 				width: 100%
-				border: 10px solid #ffffff
 
 .portfolio
 	background-image: url(../img/light-bg.png)
 	padding-top: 165px
 	padding-bottom: 200px
+	overflow: hidden
 
-	+r(1200)
-		padding-top: 100px
-		padding-bottom: 120px
+	+r(1440)
+		padding-top: 90px
+		padding-bottom: 90px
 
-	+r(768)
-		padding-top: 80px
-		padding-bottom: 80px
-
-	+r(320)
+	+r(992)
 		padding-top: 50px
 		padding-bottom: 50px
 
@@ -619,24 +682,22 @@
 		margin-bottom: 75px
 
 		+r(992)
+			margin-bottom: 50px
+
+		+r(576)
 			flex-direction: column
-			align-items: start
+			align-items: center
+			gap: 25px
 
 	&__title
 		font-family: $titleFont
-		font-size: 50px
-
-		+r(992)
-			margin-bottom: 40px
 
 		+r(768)
-			font-size: 45px
+			max-width: 70%
 
-		+r(480)
-			font-size: 38px
-
-		+r(320)
-			font-size: 26px
+		+r(576)
+			max-width: 100%
+			text-align: center
 
 		span
 			color: $accent
@@ -645,12 +706,33 @@
 		max-width: 180px
 		height: 60px
 
+		+r(992)
+			max-width: 160px
+			height: 55px
+
+		+r(768)
+			align-self: flex-end
+
+		+r(576)
+			align-self: center
+
 //---------------------------swiper slider-------------------
 
 .swiper-container
 	width: 100%
 	height: 100%
 	position: relative
+	overflow: visible
+
+	&::after
+		content: ''
+		width: 100%
+		height: 100%
+		background-image: url(../img/light-bg.png)
+		position: absolute
+		left: -1300px
+		top: 0
+		z-index: 111
 
 .swiper-wrapper
 	position: relative
@@ -671,12 +753,12 @@
 	background: #fff
 	display: flex
 	justify-content: center
-	display: flex
 	flex-direction: column
+	border: 10px solid #ffffff
+	max-width: 410px
 
 	img
-		border: 10px solid #ffffff
-		width: 410px
+		width: 100%
 
 		+r(1200)
 			width: 100%
@@ -684,7 +766,6 @@
 	a
 		color: $text
 		font-size: 24px
-		width: 4
 
 		&:hover
 			color: $accent
@@ -777,13 +858,13 @@
 	background-size: contain
 	position: relative
 
-	+r(1200)
-		padding-top: 100px
-		padding-bottom: 100px
+	+r(1440)
+		padding-top: 90px
+		padding-bottom: 90px
 
 	+r(992)
-		padding-top: 80px
-		padding-bottom: 80px
+		padding-top: 50px
+		padding-bottom: 50px
 
 	+r(576)
 		background-size: cover
@@ -792,7 +873,7 @@
 
 	&__title
 		font-family: $titleFont
-		font-size: 50px
+		// font-size: 50px
 		text-transform: uppercase
 		line-height: 1.4
 		margin-bottom: 60px
@@ -800,15 +881,6 @@
 		+r(1200)
 			text-align: center
 			margin-bottom: 40px
-
-		+r(768)
-			font-size: 45px
-
-		+r(480)
-			font-size: 38px
-
-		+r(320)
-			font-size: 26px
 
 		span
 			color: $accent
@@ -879,7 +951,7 @@
 		right: 0
 		margin: auto
 
-		+r(1200)
+		+r(1600)
 			display: none
 
 .sale
@@ -890,16 +962,12 @@
 	background-repeat: no-repeat
 	background-size: cover
 
-	+r(1200)
-		padding-top: 100px
-		padding-bottom: 80px
+	+r(1440)
+		padding-top: 90px
+		padding-bottom: 90px
 		background-position: center
 
-	+r(768)
-		padding-top: 80px
-		padding-bottom: 80px
-
-	+r(320)
+	+r(992)
 		padding-top: 50px
 		padding-bottom: 50px
 
@@ -920,22 +988,17 @@
 			row-gap: 20px
 			margin-bottom: 50px
 
+		+r(768)
+			text-align: center
+			align-items: center
+
 		+r(320)
 			text-align: center
 			margin-bottom: 30px
 
 		&--title
-			font-size: 50px
 			font-family: $titleFont
 
-			+r(768)
-				font-size: 45px
-
-			+r(480)
-				font-size: 38px
-
-			+r(320)
-				font-size: 26px
 			span
 				color: $accent
 
@@ -955,7 +1018,7 @@
 		width: 820px
 
 		+r(768)
-			width: 90%
+			width: 100%
 
 		+r(480)
 			width: 100%
@@ -970,8 +1033,9 @@
 			width: 455px
 			padding-top: 20px
 
-			+r(480)
+			+r(768)
 				align-items: center
+				width: 100%
 
 			+r(320)
 				width: 100%
@@ -997,6 +1061,10 @@
 			width: 370px
 			height: 60px
 
+			+r(480)
+				max-width: 90%
+				font-size: 12px
+
 			+r(320)
 				width: 100%
 
@@ -1010,6 +1078,10 @@
 		align-items: flex-end
 		width: 100%
 		margin-bottom: 75px
+
+		+r(768)
+			justify-content: center
+			gap: 25px
 
 		+r(320)
 			margin-bottom: 40px
@@ -1087,21 +1159,13 @@
 	padding-bottom: 190px
 	background-color: $bgColor
 
-	+r(1200)
-		padding-top: 120px
-		padding-bottom: 120px
+	+r(1440)
+		padding-top: 90px
+		padding-bottom: 90px
 
 	+r(992)
-		padding-top: 100px
-		padding-bottom: 100px
-
-	+r(768)
-		padding-top: 80px
-		padding-bottom: 80px
-
-	+r(320)
-		padding-top: 80px
-		padding-bottom: 60px
+		padding-top: 50px
+		padding-bottom: 50px
 
 	&__wrapper
 		display: flex
@@ -1110,19 +1174,12 @@
 		overflow: hidden
 
 	&__title
-		font-size: 50px
 		font-family: $titleFont
 		text-align: center
 		margin-bottom: 70px
 
 		+r(768)
-			font-size: 45px
-
-		+r(480)
-			font-size: 38px
-
-		+r(320)
-			font-size: 26px
+			margin-bottom: 40px
 
 	&__items
 		display: grid
@@ -1137,7 +1194,7 @@
 		+r(768)
 			grid-template-columns: 1fr 1fr
 
-		+r(320)
+		+r(480)
 			grid-template-columns: 1fr
 
 		&--content
@@ -1153,17 +1210,15 @@
 					grid-column-start: 2
 					grid-column-end: 2
 
-				+r(320)
+				+r(480)
 					grid-column-start: 1
 					grid-column-end: 1
 
 	&__button
-		width: 345px
-		height: 60px
 		position: relative
-
-		+r(320)
-			width: 95%
+		display: flex
+		align-items: center
+		justify-content: center
 
 		&::before
 			display: block
@@ -1182,6 +1237,16 @@
 			position: absolute
 			top: 50%
 			left: 390px
+
+		&--item
+			width: 345px
+			height: 60px
+
+			+r(480)
+				max-width: 80%
+
+			+r(320)
+				width: 95%
 
 .contacts
 	padding-top: 165px
@@ -1209,19 +1274,22 @@
 		color: #ffffff
 		margin-bottom: 80px
 
-		+r(1200)
+		+r(1440)
+			font-size: 36px
+
+		+r(576)
 			font-size: 30px
 
 		+r(480)
 			font-size: 26px
 
 		+r(320)
-			font-size: 22px
 			margin-bottom: 40px
+			text-align: center
 
 	&__item
 		+between
-		width: 100%
+		width: 980px
 
 		+r(768)
 			flex-direction: column
@@ -1231,8 +1299,7 @@
 		+between
 		flex-direction: column
 		align-items: flex-start
-		width: 365/1300*100%
-		height: 360px
+		width: 360px
 
 		+r(1200)
 			width: 365/962*100%
@@ -1281,8 +1348,8 @@
 		+between
 		flex-direction: column
 		align-items: start
-		width: 360/1300*100%
-		height: 360px
+		flex-wrap: nowrap
+		width: 360px
 
 		+r(1200)
 			width: 365/962*100%
@@ -1337,6 +1404,9 @@
 
 			+r(992)
 				font-size: 25px
+
+			+r(480)
+				font-size: 22px
 
 			+r(320)
 				font-size: 20px
@@ -1424,14 +1494,6 @@
 
 			+r(992)
 				width: 100px
-
-.section
-	padding: 150px 0
-
-	&__container
-		display: flex
-		flex-wrap: wrap
-		gap: 15px
 
 // -----MODAL-----
 .modal
@@ -1770,3 +1832,70 @@
 
 			img
 				max-width: 50%
+
+//------------ Performered---------
+
+.performered
+	padding: 195px 0 195px 80px
+	background-color: #f7f5f5
+
+	&__wrap
+
+		h2
+			font-size: 60px
+			color: $text
+			margin-bottom: 40px
+			+r(1200)
+				font-size: 45px
+			+r(767)
+				font-size: 32px
+				text-align: center
+
+		ul
+			display: flex
+			flex-wrap: wrap
+			gap: 20px
+			margin-bottom: 50px
+			+r(480)
+				flex-direction: column
+				align-items: center
+				justify-content: center
+			li
+				text-transform: uppercase
+				color: $accent
+				padding: 20px
+				border: 2px solid $accent
+				cursor: pointer
+				+r(992)
+					padding: 10px
+
+				&:hover
+					background-color: $accent
+					color: #fff
+					+transition
+
+				&:focus
+					background-color: $accent
+
+	&-tabs__wrap-item
+		width: 30%
+		gap: 35px
+		+r(992)
+			width: 45%
+		+r(480)
+			width: 100%
+
+		p
+			font-size: 24px
+			color: $text
+	&__img
+		border: 10px solid #fff
+		img
+			width: 100%
+			height: auto
+
+	&__wrapper
+		display: flex
+		flex-wrap: wrap
+		justify-content: flex-start
+		gap: 30px
