--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1402,6 +1402,10 @@ h3
 			font-size: 30px
 			font-weight: bold
 
+			&:hover
+				color: #ffffff
+				cursor: pointer
+
 			+r(992)
 				font-size: 25px
 
@@ -1414,6 +1418,10 @@ h3
 		&--email
 			color: #ffffff
 			font-size: 24px
+
+			&:hover
+				color: #ffffff
+				cursor: pointer
 
 			+r(992)
 				font-size: 20px
