--- a/sass/main.sass
+++ b/sass/main.sass
@@ -336,6 +336,10 @@ h3
 			color: #ffffff
 			font-size: 20px
 
+			&:hover
+					color: #ffffff
+					text-decoration: underline
+
 		&--city
 			font-size: 16px
 			color: #ffffff
