--- a/sass/main.sass
+++ b/sass/main.sass
@@ -178,7 +178,6 @@
 				width: 25px
 				transform: rotate(-45deg)
 
-
 .header
 	position: fixed
 	top: 0
@@ -288,7 +287,6 @@
 
 		&--wrapper
 			height: 75px
-			
 
 			+r(1200)
 				height: 100%
@@ -309,7 +307,6 @@
 				gap: 15px
 
 	&__info
-		
 
 		&--contacts
 			gap: 10px
@@ -377,12 +374,10 @@
 				color: #ffffff
 				text-decoration: underline
 
-
 .nav
 	&__menu
 		+between
 		height: 100%
-		max-width: 50%
 
 		+r(1200)
 
@@ -455,11 +450,10 @@
 
 			&:last-child
 				margin-bottom: 0
-		
+
 		a
 			width: 100%
 			padding: 10px
-
 
 .about
 
@@ -608,7 +602,6 @@
 
 			+r(320)
 				max-width: 100%
-
 
 .services
 	background-image: url(../img/main-bg.png)
@@ -774,7 +767,6 @@
 
 			img
 				width: 100%
-
 
 .portfolio
 	background-image: url(../img/light-bg.png)
@@ -1080,7 +1072,6 @@
 		+r(1600)
 			display: none
 
-
 .sale
 	padding-top: 190px
 	padding-bottom: 180px
@@ -1279,7 +1270,6 @@
 				+r(992)
 					font-size: 12px
 
-
 .partners
 	padding-top: 175px
 	padding-bottom: 190px
@@ -1326,7 +1316,6 @@
 
 		+r(768)
 			grid-template-columns: 1fr 1fr
-
 
 		&--content
 			height: 160px
@@ -1382,7 +1371,6 @@
 
 			+r(480)
 				max-width: 100%
-
 
 .contacts
 	padding-top: 165px
@@ -1572,7 +1560,6 @@
 				font-size: 14px
 				width: 100%
 
-
 .footer
 	padding-top: 45px
 	padding-bottom: 40px
@@ -1642,7 +1629,6 @@
 
 			+r(992)
 				width: 100px
-
 
 // -----MODAL-----
 .modal
@@ -2180,7 +2166,7 @@
 
 		+r(1200)
 			font-size: 45px
-				
+
 		+r(767)
 			font-size: 32px
 			text-align: center
@@ -2365,7 +2351,7 @@
 			font-size: 45px
 			font-family: $titleFont
 			color: $accent
-			
+
 			+r(1440)
 				font-size: 36px
 
@@ -2390,13 +2376,13 @@
 				+r(480)
 					font-size: 16px
 
-
 		&--button
 			width: 220px
 			height: 60px
 
 			+r(1200)
 				height: 50px
+				font-size: 14px
 
 			+r(768)
 				font-size: 12px
@@ -2678,6 +2664,7 @@
 
 			+r(1200)
 				height: 50px
+				font-size: 14px
 
 			+r(992)
 				height: 40px
@@ -2913,7 +2900,6 @@
 			+r(992)
 				height: 40px
 				font-size: 12px
-
 
 .description
 	padding-top: 75px
