--- a/sass/main.sass
+++ b/sass/main.sass
@@ -98,6 +98,12 @@
 	height: 18px
 	margin-right: 15px
 	outline: none
+	span
+		background-color: $accent
+
+		&::before,
+		&::after
+			background-color: $accent
 
 	+r(1200)
 		display: block
@@ -113,14 +119,6 @@
 	+r(480)
 		right: 10px
 		top: 25px
-
-	&:hover
-		span
-			background-color: $accent
-
-			&::before,
-			&::after
-				background-color: $accent
 
 	&__item
 		position: absolute
@@ -142,7 +140,7 @@
 			display: block
 			position: absolute
 			right: 0
-			background-color: $accent
+			background-color: #fff
 			height: 2px
 			+transition
 
@@ -157,13 +155,12 @@
 	&--active
 		z-index: 1000
 
-		&:active
-			span
-				background-color: transparent
+		span
+			background-color: transparent
 
-				&::before,
-				&::after
-					background-color: #fff
+			&::before,
+			&::after
+				background-color: #fff 
 
 		.hamburger__item
 			background-color: transparent
@@ -1469,7 +1466,7 @@
 				background-color: transparent
 				width: 100%
 				color: #ffffff
-				font-size: 18px
+				font-size: 20px
 
 		&--button
 			border-color: #ffffff
@@ -1543,7 +1540,7 @@
 			font-weight: bold
 
 			&:hover
-				color: #ffffff
+				color: $accent
 				cursor: pointer
 
 			+r(992)
@@ -1560,7 +1557,7 @@
 			font-size: 24px
 
 			&:hover
-				color: #ffffff
+				color: $accent
 				cursor: pointer
 
 			+r(992)
@@ -2113,12 +2110,6 @@
 
 	&__right
 
-		+r(992)
-			max-width: 400px
-
-		+r(768)
-			max-width: 300px
-
 		+r(576)
 			width: 100%
 			max-width: 100%
@@ -2180,7 +2171,6 @@
 			+r(992)
 				grid-template-columns: 1fr
 				margin-bottom: 30px
-				max-width: 400px
 				gap: 20px
 
 			+r(768)
@@ -2250,6 +2240,8 @@
 	p
 		font-size: 22px
 		width: 81%
+		+r(992)
+			width: 100%
 
 		+r(1200)
 			font-size: 18px
@@ -2929,8 +2921,6 @@
 				height: 40px
 				font-size: 12px
 
-//------------------------------------------------
-
 //----------------Trex-----------------------------
 .trex
 	background-color: $bgColor
@@ -3024,6 +3014,8 @@
 
 		+r(1200)
 			font-size: 16px
+		+r(992)
+			text-align: left
 
 		+r(576)
 			text-align: left
@@ -3233,4 +3225,3 @@
 			+r(576)
 				max-width: 50px
 
-//--------------------------------------------------
