--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1866,8 +1866,8 @@
 
 //------------ Performered---------
 .performered
-	padding-top: 195px
-	padding-bottom: 145px
+	padding-top: 195px !important
+	padding-bottom: 145px !important
 	background-color: #f7f5f5
 	position: relative
 
