--- a/sass/_base/_vars.sass
+++ b/sass/_base/_vars.sass
@@ -1,29 +1,30 @@
 
 //----------------------fonts---------------------
-$mainFont: 'TTDrugs', sans-serif
-$titleFont: 'HistoryPro', sans-serif
+$title: 'Rusoone', sans-serif
+$fonts: 'Golos', sans-serif
 //---------------------end-fonts---------------------
 
 //----------------------color---------------------
-$accent: #b17a58
-$text: #2b2a29
-$bgColor: #F7F5F5
+$accent: #ffffff
+$text: #333333
+$dark: #242526
+$red: #9D2616
+$bgColor: #F2F2F5
 //---------------------end-color---------------------
 
 body
 	overflow-x: hidden
 	position: relative
 	min-width: 320px
-	font-family: $mainFont
-	font-size: 14px
+	font-family: $fonts
+	font-size: 146x
 	color: $text
 	line-height: 1.4
 	font-weight: 400
-	min-height: 100vh
+	// min-height: 100vh
 	display: flex
 	flex-direction: column
 	justify-content: space-between
-	scroll-behavior: smooth
 
 ::selection
 	background-color: $accent
@@ -33,11 +34,10 @@ body
 	color: #666
 	
 h1, h2, h3, h4, h5, h6
-	font-weight: 400
+	font-weight: 700
 	line-height: 1.2
 	margin: 0
 	padding: 0
-	font-family: $titleFont
 
 ul
 	margin: 0
@@ -48,6 +48,10 @@ b, strong
 	font-weight: 700
 
 p
+	font-size: 16px
+	font-weight: 400
+	color: $text
+	font-family: $fonts
 	margin: 0
 	padding: 0
 
@@ -60,7 +64,6 @@ button
 		outline: none
 		text-decoration: none
 		outline: none
-		cursor: pointer
 
 
 input, textarea, select
@@ -71,11 +74,13 @@ input, textarea, select
 	// -webkit-appearance: none
 	
 	&:focus:required:invalid
+		border-color: red
 		outline: none
 		box-shadow: none
 		-webkit-appearance: none
 
 	&:required:valid
+		border-color: green
 		outline: none
 		box-shadow: none
 		-webkit-appearance: none
