--- a/sass/_base/_fonts.sass
+++ b/sass/_base/_fonts.sass
@@ -16,6 +16,7 @@
 		font-display: swap
 
 
-@include font('HistoryPro', normal, 400, '../fonts/HistoryPro-Two.woff2')
-@include font('TTDrugs', normal, 400, '../fonts/TTDrugs-Regular.woff2')
-@include font('TTDrugs', normal, 700, '../fonts/TTDrugs-Bold.woff2')
+@include font('Rusoone', normal, 400, '../fonts/russoone.woff2')
+
+@include font('Golos', normal, 400, '../fonts/Golostextregular.woff2')
+@include font('Golos', demibold, 600, '../fonts/Golostextdemibold.woff2')
