--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1872,20 +1872,21 @@
 	position: relative
 
 	+r(1200)
-		padding-top: 145px
+		padding-top: 145px !important
 
 	+r(992)
 		padding-left: 0
-		padding-bottom: 90px
+		padding-top: 90px !important
+		padding-bottom: 90px !important
 
 	+r(768)
-		padding-top: 80px
+		padding-top: 80px !important
 	
 	+r(576)
-		padding-bottom: 50px
+		padding-bottom: 50px !important
 
 	+r(480)
-		padding-top: 70px
+		padding-top: 70px !important
 
 	&_list
 		padding-right: 30px
