--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3815,7 +3815,13 @@
 		color: #8a8a8a
 		text-decoration: underline
 
+		&:hover
+			color: #8a8a8a
+
 		&--active
 			color: #8a8a8a
 			text-decoration: none
+
+			&:hover
+				color: #8a8a8a
 
